# akpt

./: Cargo.toml  README.md
example/: akptconfig.json
example/models/example1/: fields.json
proc_macros/: Cargo.toml
proc_macros/src/: lib.rs
project/: commandflow.drawio  data.drawio
src/: config.rs  error.rs  macros.rs  main.rs  request.rs
src/commands/: create_model.rs  get.rs  get_model.rs  init.rs  new.rs
src/commands/get/: model.rs
src/commands/new/: model.rs
src/config/: field.rs  model.rs
src/request/: response.rs
src/request/response/: response_types.rs
src/tools/: workspace.rs
src/types/: config.rs  error.rs  response.rs
